Bump SkyLib dependency to 2.0.0.0 and update api usage. Add 26.1, 26.1.1, and 26.1.2 support. Update README FAQ with information about java versions.
Signed-off-by: lukeskywlker19 <thelukeskywlker19@gmail.com>